# RestaurantFinder

./: .gitignore  README.md  ai_service.Dockerfile  backend.Dockerfile  docker-compose.yml  plan.md  pyproject.toml
ai_service/: gemini_client.py  main.py  models.py
app/: ai_client.py  auth.py  database.py  dependencies.py  discover_repo.py  discover_seed.py  main.py  models.py  redis.py  repository.py  summary.py
docs/: EX3-notes.md  security-checklist.md  service-contract.md
docs/runbooks/: compose.md
frontend/: index.html
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: Navbar.jsx  ProtectedRoute.jsx
frontend/src/pages/: DiscoverPage.jsx  LoginPage.jsx  ProfilePage.jsx  RegisterPage.jsx  VisitedPage.jsx
scripts/: demo.sh  ingest_discover.py  refresh.py
tests/: conftest.py  restaurant_requests.http  test_ai_recommendation.py  test_auth.py  test_discover_api.py  test_discover_seed.py  test_gemini_client.py  test_ingest_discover.py  test_rate_limit.py  test_refresh.py  test_refresh_script.py  test_restaurants.py  test_user_isolation.py  test_worker.py
worker/: main.py
