[project]
name = "eass-project-resturant-finder"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "arq>=0.25.0",
    "google-genai>=1.0.0",
    "bcrypt<4.0.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "logfire>=4.33.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.28",
    "redis>=7.4.0",
    "streamlit>=1.56.0",
    "typer>=0.25.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.35.1",
    "pytest>=9.0.3",
]
